src/components/open-props-demo/open-props-demo.module.scss
@import 'open-props/normalize.min.css';
@import 'open-props/open-props.min.css'; 

.card {
  align-items: center;
  border-radius: var(--radius-conditional-2);
  box-shadow: var(--shadow-2);
  display: flex;
  gap: var(--size-4);
  padding: var(--size-4);
  background: var(--gradient-17);
  color: var(--gray-5);
}

.card date {
  color: var(--text-2);
}

.card img {
  aspect-ratio: var(--ratio-box);
  border-radius: var(--radius-blob-3);
  width: var(--size-6);
  background-color: var(--violet-5);
  color: red;
}

.guest {
  align-items: center;
  display: flex;
  flex-shrink: 0;
  gap: var(--size-2);
}

